# 2025_rm_auto_aim

./: .CMakeLists.txt  .gitignore  CMakeLists.txt  README.md  detect_armor_param
armor_detect/: CMakeLists.txt  package.xml
armor_detect/include/: armor_classify.h  armor_detect.h  armor_detect_node.h  pnpslover.h
armor_detect/src/: armor_classify.cpp  armor_detect.cpp  armor_detect_node.cpp  pnpslover.cpp
armor_interfaces/: CMakeLists.txt  package.xml
armor_interfaces/msg/: Armors.msg
armor_tracker/: CMakeLists.txt  package.xml
armor_tracker/include/: armor_tracker_node.h  kalman_filter.h  tracker.h
armor_tracker/launch/: armor_tracker.launch.py
armor_tracker/src/: armor_tracker_node.cpp  kalman_filter.cpp  tracker.cpp
config/: 1.yaml  2.yaml  InfantryOne.yaml  Sentry.yaml  demo.yaml  old.yaml
controller_io/: CMakeLists.txt  package.xml
controller_io/include/: auto_aim_package.h  controller_io_node.h
controller_io/src/: controller_io_node.cpp
custom_serial_driver/: CMakeLists.txt
custom_serial_driver/include/: custom_serial_driver.h
custom_serial_driver/src/: crc.cpp  custom_serial_driver.cpp
hik_camera/: CMakeLists.txt  package.xml
hik_camera/include/: CameraParams.h  HK-Camera-Driver.h  HKCameraNode.h
hik_camera/src/: HK-Camera-Driver.cpp  HKCameraNode.cpp
src/armor_detect/: CMakeLists.txt
src/armor_detect/include/: armor_classify.h  armor_detect.h  armor_detect_node.h  pnpslover.h
src/armor_detect/launch/: armor_detector.launch.py
src/armor_detect/src/: armor_classify.cpp  armor_detect.cpp  armor_detect_node.cpp  pnpslover.cpp
src/armor_interfaces/: CMakeLists.txt
src/armor_tracker/: CMakeLists.txt  package.xml
src/armor_tracker/src/: armor_tracker_node.cpp
src/custom_serial_driver/: CMakeLists.txt
src/custom_serial_driver/include/custom_serial_driver/: serial_driver.h
src/hik_camera/: CMakeLists.txt
src/hik_camera/include/: hik_camera_node.h
src/hik_camera/src/: hik_camera_node.cpp  hik_camera_setup.cpp
