<package format="2">
  <name>hik_camera</name>
  <version>0.1.0</version>
  <description>The hik_camera package</description>

  <maintainer email="2127800097@qq.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>OpenCV</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>